NEWSYSLOG NEWS -- history of user-visible changes.

This file:  Copyright (C) Planix, Inc.
	    - see COPYING for details

Please send bug reports to bugs@robohack.planix.com

* User-visible changes since newsyslog-1.1.

- note that '-m' and '-M' are deprecated and will be removed in the next
  major release

- added the "/" flag to cause archiving into a ".old" sub-directory.

- fixed a bug that prevented non-existant logs from being created by
  default

- fixed a bug that caused unnecessary roll-over when creating a missing
  log file

- fixed a bug that was causing the size to be ignored whenever a
  time-of-day specification was given as the interval

- improved the interaction of '-v' and '-n' so that the mixed output on
  stdout can be directly processed by a shell (verbose output now
  appears as a shell comment)

- fixed a bug that made very large log files impossible to find and roll
  over when using size as the only criteria (verbose output said simply
  "does not exist")

- improved backward compatability for some *BSD newsyslog.conf files.

- add '-q' (for quiet) option.

- add special '-U' option, for NetBSD system build support.

- fixed another bug that was causing missing log files to not be created
  even when '-F' was used.


* User-visible changes since newsyslog-1.0.103.

- finally found and fixed a long-standing (since 1.0.93) locking bug
  that allowed multiple instances to run with the same config file at
  the same time.

- fixed portability issues with PID value sanity checks on GNU/Linux.

- signal names (and their descriptions) are now printed instead of just
  their numeric values whenever a child process (log compressor) has
  been killed by a signal.

- implemented a more portable signal name translation scheme (all
  GNU/Linux systems suffered a bug that would cause any signals above #6
  to be sent with one added to their values (e.g. SIGUSR1, which is 10 is
  sent as 11, which ends up as SIGSEGV, which is bad)

